tdf#108473: don't let empty date in datetime in forms

If only an hour is given (so no date part), copy behavior for table and query
and put 30/12/99 by default

Change-Id: Ifb371758538d2d11bd02b101a347d34816b6fddf
Reviewed-on: https://gerrit.libreoffice.org/48665
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit a30652295be09afdbba707ce13d0a03e22c4e7a3)
Reviewed-on: https://gerrit.libreoffice.org/48692
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Jenkins <ci@libreoffice.org>